<resources>
    <string name="app_name">JobfairPromo</string>
    <string name="ime_i_prezime">Ime i prezime</string>
    <string name="email">Email</string>
    <string name="telefon">Telefon</string>
    <string name="prijavi_se">Prijavi se</string>
    <string name="jfSlogan">JobFAIR \'16 \nIskoristi svoju ŠANSU!</string>
    <string name="powered_by_eestec_lc_sarajevo">Powered by EESTEC LC SARAJEVO</string>
</resources>
